DSI warnings (utility pin vs. DC6, and burst mode)
Some general information about the system I'm using:
- CPU: i3-11104G w/o discrete GPU
- System architecture:
x86_64
- Kernel version:
6.0.0-rc1+
- Linux distribution: Ubuntu 22.04
- Machine: Huawei MateBook E 2022
- Display connector: DSI-1
After my last issue was fixed and the driver is now loading, there are some new errors, which appear on every boot:
Unclaimed read. This is DSS_CTL1. Dual link DSI is going to need the DSC power domain.
[ 5.818969] i915 0000:00:02.0: [drm:intel_enable_shared_dpll [i915]] enabling DPLL 0
[ 5.819281] ------------[ cut here ]------------
[ 5.819282] i915 0000:00:02.0: Unclaimed read from register 0x67400
Here is the full dmesg log with the latest drm-tip kernel: dmesg.log
I'm not sure if I named this issue correctly, feel free to change the title to be more meaningful.